--- a/analysis/analysis.html
+++ b/analysis/analysis.html
@@ -41,8 +41,10 @@
 			<section>
 				<h2>Essay Outline</h2>
 				<ul>
-					<li><b><a href="example.html#sec2">[Sec. #2]</a> - Early detection is better than late treatments</b><br/>
-The topic of this section is made very clear in the first quoted statement in this section <q>Early detection is key</q>, and the rest of the section talks about why early detection is better, which is particularly indicated by the key phrase <q>the drugs are administered too late to be helpful</q>.</li>
+					<li><b><a href="example.html#sec1">[Sec. #1]</a> - Fossil-fuel use can decline after reaching a peak, but the world needs to take stronger action</b><br/>
+					The first sentence of this section serves as the thesis statement, and the topic talks about major challenges in face of reducing fossil-fuel use. The key phrases like <q>the global use of fossil fuels</q>and<q>planet-warming carbon dioxide emissions</q>clearly indicate the focus. Besides, the words like <q>global</q>and<q>governments</q> refer to the main subjects in the essay.</li>
+					<li><b><a href="example.html#sec2">[Sec. #2]</a> - Fossil-fuel use can decline after a peak, but the world needs to take stronger action</b><br/>
+The topic of this section mentions both the possibility and chanllenges, which is made very clear in the first quoted statement in this section <q>Early detection is key</q>, and the rest of the section talks about why early detection is better, which is particularly indicated by the key phrase <q>the drugs are administered too late to be helpful</q>.</li>
 					<li><b><a href="example.html#sec3">[Sec. #3]</a> - Current approaches are expensive and may be unavailable</b><br/>
 In the first statement of the section, the key phrase <q>For now</q> implies that this section focuses on the current approaches to the detection of dementia. Crucially, in the last statement, the author points of the problems with the current approaches using keywords or phrases like <q>expensive</q>, <q>invasive</q>, and <q>not available</q>.</li>
 				</ul>
