--- a/analysis/example.html
+++ b/analysis/example.html
@@ -73,24 +73,25 @@
 				<p>
 					“The world has made a remarkable amount of progress on clean energy over the past decade,” Fatih Birol, the agency’s executive director, said in an interview. “But there’s still so much more that needs to happen.”
 				</p>
+				<p>
+					The new report finds that the world has made significant strides in the fight against climate change. <span class="joint">&#9658;</span>Wind and solar power are now the cheapest source of new electricity in most markets and growing <span class="vocab">briskly<span><b>"briskly"</b> - in a clean, energetic way</span></span>, and sales of electric vehicles worldwide hit records last year. Across the globe, approvals for new coal-fired power plants, a major source of emissions, have slowed dramatically in recent years, as governments and banks have increasingly refused to finance them.
+				</p>
+				<p>
+					Governments are also stepping up their policies to curb emissions. <span class="joint">&#9658;</span>As the European Union has been increasing the price it charges large polluters to <span class="vocab">emit<span><b>"emit"</b> - send out a gas or other subtance</span></span> carbon dioxide, India has <span class="vocab">ratcheted up<span><b>"ratchet sth up"</b> - increase something in controlled stages over a period of time</span></span>efficiency standards for new air-conditioners, and China has said it would stop financing new coal plants overseas.
+				</p>
 			</section>
 			<section id="sec3">
 				<h3>[Sec. #3]</h3>
-				<p>
-					The new report finds that the world has made significant strides in the fight against climate change. Wind and solar power are now the cheapest source of new electricity in most markets and growing <span class="vocab">briskly<span><b>"briskly"</b> - in a clean, energetic way</span></span>. Sales of electric vehicles worldwide hit records last year. Across the globe, approvals for new coal-fired power plants, a major source of emissions, have slowed dramatically in recent years, as governments and banks have increasingly refused to finance them.
-				</p>
-				<p>
-					Governments are also stepping up their policies to curb emissions. The European Union has been increasing the price it charges large polluters to <span class="vocab">emit<span><b>"emit"</b> - send out a gas or other subtance</span></span> carbon dioxide. India has <span class="vocab">ratcheted up<span><b>"ratchet sth up"</b> - increase something in controlled stages over a period of time</span></span>efficiency standards for new air-conditioners. China has said it would stop financing new coal plants overseas.
-				</p>				
-			</section>
-			<section id="sec4">
-				<h3>[Sec. #4]</h3>
 				<p>
 					As a result, the International Energy Agency now projects that humanity’s emissions of carbon dioxide will reach a peak by the mid-2020s and then drop slowly in the decades thereafter. Global coal use is expected to fall between now and 2050, despite an <span class="vocab">uptick<span><b>"uptick"</b> - an increase in the number or amount of something</span></span>this year driven by increased industrial activity in China, while global oil demand is expected to enter into permanent decline by the 2030s, as people switch to electricity to fuel their cars.
 				</p>
 				<p>
 					That alone would be a remarkable shift. Ever since World War II, global carbon dioxide emissions have been on a seemingly <span class="vocab">inexorable<span><b>"inexorable"</b> - continuing without any possibility of being stopped</span></span>upward <span class="vocab">trajectory<span><b>"trajectory"</b> - the curved path of an object that is traveling through space</span></span>, with only temporary <span class="vocab">dips<span><b>"dip"</b> - a part of something that is at a lower level or a movement to a lower level</span></span>during recessions, as the world relied on ever greater quantities of fossil fuels to power homes, cars and factories. A turning point is now in sight, the report says.
 				</p>				
+			</section>
+			<section id="sec4">
+				<h3>[Sec. #4]</h3>
+								
 			</section>
 			<section id="sec5">
 				<h3>[Sec. #5]</h3>
