--- a/analysis/analysis.html
+++ b/analysis/analysis.html
@@ -43,10 +43,10 @@
 				<ul>
 					<li><b><a href="example.html#sec1">[Sec. #1]</a> - Fossil-fuel use can decline after reaching a peak, but the world needs to take stronger action</b><br/>
 					The first sentence of this section serves as the thesis statement, and the topic talks about major challenges in face of reducing fossil-fuel use. The key phrases like <q>the global use of fossil fuels</q> and <q>planet-warming carbon dioxide emissions</q> clearly indicate the focus. Besides, the words like <q>global</q> and <q>governments</q> refer to the main subjects in the essay.</li>
-					<li><b><a href="example.html#sec2">[Sec. #2]</a> - Fossil-fuel use can decline after a peak, but the world needs to take stronger action</b><br/>
-The topic of this section mentions both the possibility and chanllenges, which is made very clear in the first quoted statement in this section <q>Early detection is key</q>, and the rest of the section talks about why early detection is better, which is particularly indicated by the key phrase <q>the drugs are administered too late to be helpful</q>.</li>
-					<li><b><a href="example.html#sec3">[Sec. #3]</a> - Current approaches are expensive and may be unavailable</b><br/>
-In the first statement of the section, the key phrase <q>For now</q> implies that this section focuses on the current approaches to the detection of dementia. Crucially, in the last statement, the author points of the problems with the current approaches using keywords or phrases like <q>expensive</q>, <q>invasive</q>, and <q>not available</q>.</li>
+					<li><b><a href="example.html#sec2">[Sec. #2]</a> - A report from the International Energy Agency shows the global efforts</b><br/>
+					</li>
+					<li><b><a href="example.html#sec3">[Sec. #3]</a> - </b><br/>
+					</li>
 				</ul>
 			</section>
 			<section>
@@ -54,7 +54,7 @@ In the first statement of the section, the key phrase <q>For now</q> implies tha
 				<h3><a href="example.html#sec2">[Sec. #2]</a></h3>
 				<p class="cc"><span style="background-color: #dfc27d; color: white;">Coherence</span></p>
 				<ul>
-					<li><b>Para #1</b> - Section #2 is the first paragraph that follows the opening paragraph, so its first paragraph naturally carries on to elaborate on the main topic. In the first sentence <q>Early detection is key for intervention...</q>, the key phrase <q>Early detection</q> of dementia is linked back to the main topic of the essay, which creates a natural transition into the subtopic.</li>
+					<li><b>Para #1</b> - Section #2 mentions a report from <q>the International Energy Agency</q>, carrying on to elaborate on the main actions that have been taken by the global. While the previous paragraph talks about <q>The transition away from coal, oil and natural gas</q>is not happening fast enough, the topic in the report focuses on how to <q>accelerate the shift away from fossil fuels</q>, connecting to the former topic.</li>
 					<li><b>Para #2</b> - In the next paragraph of the same section, the first statement <q>In recent years, many once-promising dementia drugs...</q> still includes the keywords related to the main topic such as <q>dementia drugs</q>, which is a key to build a smooth transition. Furthermore, at the beginning of the statement, the author also uses <q>in recent years</q> to tell the readers that the focus in this paragraph is changed to things that had just happened.</li>
 				</ul>
 				<p class="cc"><span style="background-color: #a6611a; color: white;">Cohesion</span></p>
