--- a/analysis/example.html
+++ b/analysis/example.html
@@ -68,10 +68,7 @@
 			<section id="sec2">
 				<h3>[Sec. #2]</h3>
 				<p>
-					The International Energy Agency’s annual World Energy Outlook, a 386-page report that forecasts global energy trends to 2050, comes just weeks before world leaders gather for a major United Nations climate summit in Glasgow to discuss how to accelerate the shift away from fossil fuels and prevent the planet from overheating.
-				</p>
-				<p>
-					“The world has made a remarkable amount of progress on clean energy over the past decade,” Fatih Birol, the agency’s executive director, said in an interview. “But there’s still so much more that needs to happen.”
+					The International Energy Agency’s annual World Energy Outlook, a 386-page report that forecasts global energy trends to 2050, comes just weeks before world leaders gather for a major United Nations climate summit in Glasgow to discuss how to accelerate the shift away from fossil fuels and prevent the planet from overheating. <span class="joint">&#9658;</span>“The world has made a remarkable amount of progress on clean energy over the past decade, “said Fatih Birol, the agency’s executive director. “But there’s still so much more that needs to happen.”
 				</p>
 				<p>
 					The new report finds that the world has made significant strides in the fight against climate change. <span class="joint">&#9658;</span>Wind and solar power are now the cheapest source of new electricity in most markets and growing <span class="vocab">briskly<span><b>"briskly"</b> - in a clean, energetic way</span></span>, and sales of electric vehicles worldwide hit records last year. Across the globe, approvals for new coal-fired power plants, a major source of emissions, have slowed dramatically in recent years, as governments and banks have increasingly refused to finance them.
