--- a/analysis/analysis.html
+++ b/analysis/analysis.html
@@ -54,7 +54,7 @@
 				<h3><a href="example.html#sec2">[Sec. #2]</a></h3>
 				<p class="cc"><span style="background-color: #dfc27d; color: white;">Coherence</span></p>
 				<ul>
-					<li><b>Para #1</b> - Section #2 mentions a report from <q>the International Energy Agency</q>, carrying on to elaborate on the main actions that have been taken by the global. While the previous paragraph talks about <q>The transition away from coal, oil and natural gas</q>is not happening fast enough, the topic in the report focuses on how to <q>accelerate the shift away from fossil fuels</q>, connecting to the former topic.</li>
+					<li><b>Para #1</b> - Section #2 mentions a report from <q>the International Energy Agency</q>, carrying on the topic of the global actions. While the previous paragraph mentions that <q>The transition away from coal, oil and natural gas</q> is not happening fast enough, the report discusses about how to <q>accelerate the shift away from fossil fuels</q>.</li>
 					<li><b>Para #2</b> - In the next paragraph of the same section, the first statement <q>In recent years, many once-promising dementia drugs...</q> still includes the keywords related to the main topic such as <q>dementia drugs</q>, which is a key to build a smooth transition. Furthermore, at the beginning of the statement, the author also uses <q>in recent years</q> to tell the readers that the focus in this paragraph is changed to things that had just happened.</li>
 				</ul>
 				<p class="cc"><span style="background-color: #a6611a; color: white;">Cohesion</span></p>
