--- a/analysis/analysis.html
+++ b/analysis/analysis.html
@@ -47,6 +47,14 @@
 					</li>
 					<li><b><a href="example.html#sec3">[Sec. #3]</a> - </b><br/>
 					</li>
+					<li><b><a href="example.html#sec3">[Sec. #4]</a> - </b><br/>
+					</li>
+					<li><b><a href="example.html#sec3">[Sec. #5]</a> - </b><br/>
+					</li>
+					<li><b><a href="example.html#sec3">[Sec. #6]</a> - </b><br/>
+					</li>
+					<li><b><a href="example.html#sec3">[Sec. #7]</a> - </b><br/>
+					</li>
 				</ul>
 			</section>
 			<section>
@@ -56,17 +64,26 @@
 				<ul>
 					<li><b>Para #1</b> - Section #2 mentions a report from <q>the International Energy Agency</q>, carrying on the topic of the global actions. While the previous paragraph mentions that <q>The transition away from coal, oil and natural gas</q> is not happening fast enough, the report discusses about how to <q>accelerate the shift away from fossil fuels</q>.</li>
 					<li><b>Para #2</b> - In the next paragraph of the same section, the first statement <q>In recent years, many once-promising dementia drugs...</q> still includes the keywords related to the main topic such as <q>dementia drugs</q>, which is a key to build a smooth transition. Furthermore, at the beginning of the statement, the author also uses <q>in recent years</q> to tell the readers that the focus in this paragraph is changed to things that had just happened.</li>
+					<li><b>Para #3</b> - </li>
+					<li><b>Para #4</b> - </li>
+					<li><b>Para #5</b> - </li>
+					<li><b>Para #6</b> - </li>
+					<li><b>Para #7</b> - </li>
 				</ul>
 				<p class="cc"><span style="background-color: #a6611a; color: white;">Cohesion</span></p>
 				<ul>
 					<li><b>Para #1</b> - In the second sentence of the first paragraph <q>Such efforts could help...</q>, the author uses the phrase <q>such effort</q> to refer to <q>early detection</q> in the previous sentence, which is a strategy involving the use of <b>demonstrative adjective</b> to emphasize the focus of the current writing.</li>
 					<li><b>Para #2</b> - In the third sentence of the next paragraph <q>It could also bring improvements...</q>, the author uses a <b>pronoun</b> <q>it</q> to refer to <q>identifying risks earlier</q> in the previous statement and create the logical connection.</li>
+					<li><b>Para #3</b> - </li>
+					<li><b>Para #4</b> - </li>
+					<li><b>Para #5</b> - </li>
+					<li><b>Para #6</b> - </li>
+					<li><b>Para #7</b> - </li>
 				</ul>
 			</section>
 			<section>
 				<h2>Take-home Message</h2>
-				<p>In the last paragraph of the entire essay, the author quotes the story of a participant taking part in the studies that investigate early indicators of dementia. In this story, the author's writing implies some positive aspects of understanding whether you have an early development of dementia. For example, the author shows that the odds of Alzheimer's disease is <q>lower than the participant had feared</q>. The author also quotes the participant's positive attitude toward the understanding of the risk despite the need to share their personal data, like <q>I would want to use them. I'd rather know than not</q>. Thus, we can see that in general, the author tries to convince people that <span style="background-color: #80cdc1;">there are more advantages than disadvantages to use your personal data to reveal your chance of having dementia and it's better to get fully prepared</span>.</p>
-				<p class="quote"><q>Paul Gondek, 68, who lives in Philadelphia and teaches social psychology at Drexel University, chose to learn his risk status two years ago, volunteering for several studies at the Penn Memory Center. Alzheimer’s tends to run in families and, having watched his mother’s slow decline from the disease, he knew he had a higher chance of developing it. To Mr. Gondek’s relief, the PET scan showed that he did not have elevated amounts of amyloid in his brain. And a calculated risk score showed that his odds of Alzheimer’s by age 85 were about 19 percent — higher than the 11 percent risk for the general population, but lower than he had feared. If other early indicators were available through driving or financial records or other behaviors and were reliable, he said, “I would want to use them. I’d rather know than not.”</q></p>
+				
 			</section>
 		</article>
 	</body>
