--- a/personal/essay.html
+++ b/personal/essay.html
@@ -56,8 +56,7 @@
 	</style>
 	<body>
 		<nav>
-			<a>+</a> | <a href="index.html">Home</a> | <a href="essay.html">Essay</a> | 
-			<a href="guidelines.html">Analysis Guidelines</a> | <a href="analysis.html">Structure Analysis</a>
+			<a href="#"><span>+</span></a><a href="index.html">Home</a><a href="ay.html">About me</a><a href="essay.html">Favorite BnB</a>
 		</nav>
 		<article>
 			<figure><img src="img/sk2.jfif"></figure>
