--- a/personal/index.html
+++ b/personal/index.html
@@ -7,7 +7,7 @@
 	</head>
 	<body>
 		<nav>
-			<a href="#"><span>+</span></a><a href="index.html">Home</a><a href="ay.html">About me</a><a href="essay.html">Favorite BnB</a>
+			<a href="#"><span>+</span></a><a href="index.html">Home</a><a href="ay.html">About me</a><a href="fbnb.html">Favorite BnB</a>
 		</nav>
 		
 	</body>
