--- a/personal/fbnb.html
+++ b/personal/fbnb.html
@@ -3,8 +3,35 @@
 	<head>
 		<title>My favorite BnB</title>
 		<meta charset="utf-8">
+		<link rel="stylesheet" type="text/css" href="css/default.css">
 	</head>
 	<body>
-		please appear!!
+		<nav>
+			<a href="#"><span>+</span></a><a href="index.html">Home</a><a href="ay.html">About me</a><a href="essay.html">Favorite BnB</a>
+		</nav>
+		<article>
+			<figure><img src="img/sk2.jfif"></figure>
+			<section>
+				<h1>A Yard in the Sky – an unforgettable B&B trip</h1>
+				<p>
+					 Five years ago, my family booked a two-day trip in a Nantou BnB, while wondering about where to go in the summer vacation. We turned out decide on a place with an unusual name called “A Yard in the Sky”. Around the BnB, there is no television, billiard table, or any other multimedia equipment. What we have are a butler and a well-cleaned environment without additional activities and chances of farm visiting. With the knowing in the fame, however, we were a bit worried and doubtful toward the trip. Until being to the area in person and living in the cottage in lush woods, we gradually left all the worries behind. Eventually, the trip has become a forgettable memory for me and reminded me the impressive experience again and again.
+				</p>
+				<p>
+					Speaking of the foundation of the BnB, the story is long and intriguing. At first, it was built by a big boy with his relative. The original goal was simple, and the dream prompted the boy to leave his school as a college student, entering the unknown path determinedly and starting the business. The founder, He Pei-Jun, wants the B&B to keep the simplest appearance. “A Yard in the Sky” stives to associate with environmentally friendly concept and builds connection with local culture. It takes the ideal thoughts seriously. The building has made of local materials while the food comes from local ingredients, being filled with Hakka culture. The guests should put an effort in keeping the environment as well. We are suggested stay in our own rooms and be quiet after ten at night. Besides, every public resource has to be fully cleaned up before being placed to the original sites.
+				</p>
+				<p>
+					The BnB doesn’t have fancy facilities, as the above introduction, and a wooden library could definitely be the most attractive ones among them. It has a delicate design with a set of comfortable chairs and table. All the bookshelves lie in the back. They demonstrate an open and cozy area, invite every visitor to go inside the place and set themselves in the favorite seats. Afterwards, they enjoy the abundance of the book resource within the tranquil and soothing atmosphere. My family really liked the place, and we spent a long while inside the small library at our first and the only night. In addition to the public facility, we also enjoyed our meals in the BnB a lot. Since the ingredients didn’t come from the outside, the food seemed to taste warmer and authentic. The wooden containers were so elegant with traditional Chinese poems on the lids that we couldn’t help taking numerous photos in the sense of admiration. Coming to the end of the first day, we were all satisfied with our new residence and this “yard in the sky”. Needless to say, the simplest design of a building could actually achieve the best effect. It not only caters to the desire to rest from the hustling and bustling in cities, but also strikes the balance between protecting the nature and earning money. By building up sustainable environment and seeking harmony with local regions, “A Yard in the Sky” is truly becoming successful and sets up its brand.
+				</p>
+			</section>
+			<figure><img src="img/sl.jpg"></figure>
+			<section>
+				<p>
+					五年前的暑假，我們家在南投一間名為「天空的院子」的民宿訂了一個兩天一夜的行程。透過簡潔幾行的內容介紹中了解到民宿沒有電視、撞球桌、或者任何媒體影音設備，各種疑難雜事有一位管家負責打理，然而入住期間也無附帶手工藝活動或者農場參觀等體驗。雖然民宿小有名氣，但這趟未知旅程也帶來些許懷疑與擔憂。直到親身走訪林間小屋的蔥鬱之中，所有疑慮逐漸消融，最後在我們心中留下對於旅途深刻的回憶。
+				</p>
+				<p>
+					這間民宿的創始故事並不簡單。當初是由一位毅然停學的大男孩與親友白手起家，秉持最純粹的想法做出行動，想要在竹林間打造與自然共存的棲所，令到訪的旅客能暫時拋卻城市喧囂而回歸鄉林間。「天空的院子」的經營始終與簡樸和環保的概念作為結合，建築使用當地木材、餐點也來自在地食材並帶有客家文化。在房客入住的期間，所有人也是一同努力來維護環境的良善，十點之後便被建議待在房間中、保持安靜，在公共設備使用完畢後也須清潔過後放回原位。而民宿最令人神往的公共設施則是一間開放式、由木材打造的圖書館。
+				</p>
+			</section>
+		</article>
 	</body>	
 </html>
