--- a/personal/ay.html
+++ b/personal/ay.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <html lang="en-us">
 	<head>
-		<title>Personal Page</title>
+		<title>About me</title>
 		<meta charset="utf-8">
 		<link rel="stylesheet" type="text/css" href="css/default.css">
 		<style>
