--- a/personal/ay.html
+++ b/personal/ay.html
@@ -12,8 +12,9 @@
 			nav {
 				position: fixed;
 				opacity: 0.9;
-				height: 20px;
-				line-height: 20px;
+				top: 10px;
+				left: 10px;
+				Line-height: 3vh;
 			}
 
 			h1 {
