--- a/personal/fbnb.html
+++ b/personal/fbnb.html
@@ -5,6 +5,55 @@
 		<meta charset="utf-8">
 		<link rel="stylesheet" type="text/css" href="css/default.css">
 	</head>
+	<style>
+		body {
+			background-color: #ffe4b5;
+			font-family:  Lora, serif;
+			font-size: 3vh;
+			Line-height: 4vh;
+		}
+
+		h1 {
+			font-family: Poppins, sans-serif;
+			font-size: 4vh;
+			Line-height: 6vh;
+			margin: 1vh 0;
+		}
+
+		article {
+			margin: 1.5vh 0;
+			padding: 1vh 5vw;
+			position: absolute;			
+		}
+			
+		section:first-of-type p{
+			background-color: #6495ed;
+			margin-left: 10%;
+			width: 70%;
+		}
+
+		section:last-of-type p{
+			background-color: ;
+			margin-left: 10%;
+			width: 50%;
+		}
+
+		p {
+			margin: 0.2vh 0;
+		}
+
+		nav {
+			position: fixed;
+			opacity: 0.9;
+			top: 10px;
+			left: 10px;
+			Line-height: 3vh;
+		}
+
+		figure {
+			margin-top: 30px;
+		}
+	</style>
 	<body>
 		<nav>
 			<a href="#"><span>+</span></a><a href="index.html">Home</a><a href="ay.html">About me</a><a href="essay.html">Favorite BnB</a>
