--- a/personal/index.html
+++ b/personal/index.html
@@ -5,10 +5,21 @@
 		<meta charset="utf-8">
 		<link rel="stylesheet" type="text/css" href="css/default.css">
 	</head>
+	<style>
+		body {
+			background-color: #6495ED;
+		}
+		nav {
+				position: fixed;
+				opacity: 0.9;
+				top: 10px;
+				left: 10px;
+				Line-height: 3vh;
+			}
+	</style>
 	<body>
 		<nav>
 			<a href="#"><span>+</span></a><a href="index.html">Home</a><a href="ay.html">About me</a><a href="fbnb.html">Favorite BnB</a>
-		</nav>
-		
+		</nav>		
 	</body>
 </html>
