--- a/personal/ay.html
+++ b/personal/ay.html
@@ -63,7 +63,7 @@
 		<article>
 			<h1><b>Autobiography</b></h1>
 			<p>
-				Hi! I am Yi-Lin Chiang, or you can just call my English name, Elynn. I’m currently a sophomore in NTHU, Taiwan, majoring in FLL and growing interest in learning German language. Hsinchu City is my hometown, and to be exactly, Nanliao is the place where I’ve been lived for years.
+				Hi! I am Yi-Lin Chiang, or you can just call my English name, Elynn. I’m currently a sophomore in NTHU, Taiwan, majoring in FLL and growing interest in learning German language. 
 			</p>
 			<p>
 				During my leisure time, I like to do various kinds of sports. There’s an advantage that NTHU has plenty of resources. I can randomly go for a jog in the sport field, join volleyball practices with teammates at night, or enjoy playing table tennis on weekends. Under a friend’s encouragement, I’ve also started to experience bouldering since the fresh year and found it intriguing. I believe that regularly exercising can lead to positive effect, and sometimes, even a few unexpected friendships. Overall, participating in these sports not only strengthen my body but also help invigorate my spirit. 
@@ -71,8 +71,7 @@
 			<p>
 				Before the busy high school days, reading fictions used to be one of my favorite pastimes. I liked to borrow well-received series like Harry Potter, every work from Jin Yong, or sometimes the translated version of foreign classics, such as Jane Austen’s works. Bringing back those memories, I always appreciate that these literary works have brought about imagination and enriched my early adolescence. Needless to say, they show readers all over the world a significant power of words. In the end, they also fuel my passion in pursuing languages and literature in college.
 			</p>
-		</article>
-		<figure><img src = "img/Nport.jpg"/></figure>		
+		</article>		
 		<figure><img src = "img/nthucampus.jpg"/></figure>
 		<article>
 				<p>
