--- a/personal/fbnb.html
+++ b/personal/fbnb.html
@@ -72,7 +72,7 @@
 					The BnB doesn’t have fancy facilities, as the above introduction, and a wooden library could definitely be the most attractive ones among them. It has a delicate design with a set of comfortable chairs and table. All the bookshelves lie in the back. They demonstrate an open and cozy area, invite every visitor to go inside the place and set themselves in the favorite seats. Afterwards, they enjoy the abundance of the book resource within the tranquil and soothing atmosphere. My family really liked the place, and we spent a long while inside the small library at our first and the only night. In addition to the public facility, we also enjoyed our meals in the BnB a lot. Since the ingredients didn’t come from the outside, the food seemed to taste warmer and authentic. The wooden containers were so elegant with traditional Chinese poems on the lids that we couldn’t help taking numerous photos in the sense of admiration. Coming to the end of the first day, we were all satisfied with our new residence and this “yard in the sky”. Needless to say, the simplest design of a building could actually achieve the best effect. It not only caters to the desire to rest from the hustling and bustling in cities, but also strikes the balance between protecting the nature and earning money. By building up sustainable environment and seeking harmony with local regions, “A Yard in the Sky” is truly becoming successful and sets up its brand.
 				</p>
 			</section>
-			<figure><img src="img/sl.jpg"></figure>
+			<figure><img src="img/b.jpg"></figure>
 			<section>
 				<p>
 					五年前的暑假，我們家在南投一間名為「天空的院子」的民宿訂了一個兩天一夜的行程。透過簡潔幾行的內容介紹中了解到民宿沒有電視、撞球桌、或者任何媒體影音設備，各種疑難雜事有一位管家負責打理，然而入住期間也無附帶手工藝活動或者農場參觀等體驗。雖然民宿小有名氣，但這趟未知旅程也帶來些許懷疑與擔憂。直到親身走訪林間小屋的蔥鬱之中，所有疑慮逐漸消融，最後在我們心中留下對於旅途深刻的回憶。
