--- a/personal/index.html
+++ b/personal/index.html
@@ -7,19 +7,26 @@
 	</head>
 	<style>
 		body {
-			background-color: #6495ED;
+			background-color: #6495ed;
 		}
+
 		nav {
 				position: fixed;
-				opacity: 0.9;
+				background-color: #fff8dc;
+				height: 3vh;
+				Line-height: 3vh;
+				opacity: 0.8;
 				top: 10px;
 				left: 10px;
-				Line-height: 3vh;
 			}
 	</style>
 	<body>
 		<nav>
 			<a href="#"><span>+</span></a><a href="index.html">Home</a><a href="ay.html">About me</a><a href="fbnb.html">Favorite BnB</a>
 		</nav>		
+		<p>
+			Hi! I am Yi-Lin Chiang, or you can just call my English name, Elynn. I’m currently a sophomore in NTHU, Taiwan, majoring in FLL and growing interest in learning German language. 
+		</p>
+		<figure><img src = "img/Nport.jpg"/>Hsinchu City is my hometown, and to be exactly, Nanliao is the place where I’ve been lived for years.</figure>
 	</body>
 </html>
