--- a/personal/index.html
+++ b/personal/index.html
@@ -27,6 +27,9 @@
 		<p>
 			Hi! I am Yi-Lin Chiang, or you can just call my English name, Elynn. I’m currently a sophomore in NTHU, Taiwan, majoring in FLL and growing interest in learning German language. 
 		</p>
+		<p>
+			Ich bin 19, komme aus Hsinchu~  
+		</p>
 		<figure><img src = "img/Nport.jpg"/>Hsinchu City is my hometown, and to be exactly, Nanliao is the place where I’ve been lived for years.</figure>
 	</body>
 </html>
