--- a/personal/index.html
+++ b/personal/index.html
@@ -23,13 +23,18 @@
 	<body>
 		<nav>
 			<a href="#"><span>+</span></a><a href="index.html">Home</a><a href="ay.html">About me</a><a href="fbnb.html">Favorite BnB</a>
-		</nav>		
+		</nav>	
+		<article>
 		<p>
 			Hi! I am Yi-Lin Chiang, or you can just call my English name, Elynn. I’m currently a sophomore in NTHU, Taiwan, majoring in FLL and growing interest in learning German language. 
 		</p>
 		<p>
 			Ich bin 19, komme aus Hsinchu~  
 		</p>
+		</article>
 		<figure><img src = "img/Nport.jpg"/>Hsinchu City is my hometown, and to be exactly, Nanliao is the place where I’ve been lived for years.</figure>
+		<article>
+			歡迎來到我的網站!我是江宜霖，來自新竹南寮，目前為一名就讀清大外文系的大二生，並且對於學習德語感到興趣。
+		</article>
 	</body>
 </html>
