--- a/personal/ay.html
+++ b/personal/ay.html
@@ -6,7 +6,7 @@
 		<link rel="stylesheet" type="text/css" href="css/default.css">
 		<style>
 			body {
-				background-color: #f5f5dc;
+				background-color: #6495ed;
 			}
 
 			nav {
