--- a/personal/index.html
+++ b/personal/index.html
@@ -7,18 +7,22 @@
 	</head>
 	<style>
 		body {
-			background-color: #6495ed;
+			background-color: #f5f5dc;
 		}
 
 		nav {
 				position: fixed;
-				background-color: #fff8dc;
-				height: 3vh;
-				Line-height: 3vh;
+				background-color: #d2691e;
+				height: 2vh;
+				Line-height: 2vh;
 				opacity: 0.8;
 				top: 10px;
 				left: 10px;
 			}
+
+		article {
+			margin-top: 40px;
+		}
 	</style>
 	<body>
 		<nav>
