--- a/personal/index.html
+++ b/personal/index.html
@@ -12,6 +12,7 @@
 
 		nav {
 				position: fixed;
+				display: inline-block;
 				background-color: #d2691e;
 				height: 2vh;
 				Line-height: 2vh;
@@ -26,7 +27,7 @@
 	</style>
 	<body>
 		<nav>
-			<a href="#"><span>+</span></a><a href="index.html">Home</a><a href="ay.html">About me</a><a href="fbnb.html">Favorite BnB</a>
+			<a href="index.html">Home</a><span>|</span><a href="ay.html">About me</a><span>|</span><a href="fbnb.html">Favorite BnB</a>
 		</nav>	
 		<article>
 		<p>
