--- a/personal/index.html
+++ b/personal/index.html
@@ -21,7 +21,7 @@
 				left: 10px;
 			}
 
-		article {
+		article:first-of-type {
 			margin-top: 40px;
 		}
 	</style>
@@ -31,15 +31,17 @@
 		</nav>	
 		<article>
 		<p>
-			Hi! I am Yi-Lin Chiang, or you can just call my English name, Elynn. I’m currently a sophomore in NTHU, Taiwan, majoring in FLL and growing interest in learning German language. 
+			Hi! I am Yi-Lin Chiang, or you can just call my English name, Elynn.<br/>I’m currently a sophomore in Tsing Hua Unervisity, and taking major in the foreign language and literature.   
 		</p>
 		<p>
-			Ich bin 19, komme aus Hsinchu~  
+			歡迎來到我的網站!<br/>我是江宜霖，來自新竹南寮。目前為一名就讀清大外文系的大二生。<br/>
+			除此之外也對學習德語感到興趣。
 		</p>
 		</article>
 		<figure><img src = "img/Nport.jpg"/>Hsinchu City is my hometown, and to be exactly, Nanliao is the place where I’ve been lived for years.</figure>
 		<article>
-			歡迎來到我的網站!我是江宜霖，來自新竹南寮，目前為一名就讀清大外文系的大二生，並且對於學習德語感到興趣。
+			Besides, I am learning a hard foreign language now! 
+			<span>Hallo! Ich bin 19 und komme aus Hsinchu~</span> 
 		</article>
 	</body>
 </html>
