--- a/personal/index.html
+++ b/personal/index.html
@@ -23,6 +23,12 @@
 
 		article:first-of-type {
 			margin-top: 40px;
+			position: relative;
+		}
+
+		figure {
+			position: relative;
+			left: 50%;
 		}
 	</style>
 	<body>
