--- a/personal/index.html
+++ b/personal/index.html
@@ -12,14 +12,16 @@
 
 		nav {
 				position: fixed;
-				display: inline-block;
-				background-color: #d2691e;
 				height: 2vh;
 				Line-height: 2vh;
 				opacity: 0.8;
 				top: 10px;
 				left: 10px;
 			}
+
+		nav > a {
+			background-color: #d2691e;
+		}
 
 		article:first-of-type {
 			margin-top: 40px;
