--- a/personal/index.html
+++ b/personal/index.html
@@ -18,19 +18,24 @@
 				top: 10px;
 				left: 10px;
 			}
-
-		nav > a {
-			background-color: #d2691e;
-		}
+		article {
+			margin: 1.5vh 0;
+			padding: 2vh 5vw;
+			position: absolute;			
+		}	
 
 		article:first-of-type {
+			background-color: #d2691e;
 			margin-top: 40px;
-			position: relative;
 		}
 
 		figure {
 			position: relative;
-			left: 50%;
+			margin-left: 50%;
+		}
+
+		span {
+			background-color: #8fbc8f;
 		}
 	</style>
 	<body>
@@ -46,10 +51,10 @@
 			除此之外也對學習德語感到興趣。
 		</p>
 		</article>
-		<figure><img src = "img/Nport.jpg"/>Hsinchu City is my hometown, and to be exactly, Nanliao is the place where I’ve been lived for years.</figure>
 		<article>
 			Besides, I am learning a hard foreign language now! 
 			<span>Hallo! Ich bin 19 und komme aus Hsinchu~</span> 
 		</article>
+		<figure><img src = "img/Nport.jpg"/>This is my hometown, Nanliao.</figure>
 	</body>
 </html>
