--- a/personal/ay.html
+++ b/personal/ay.html
@@ -58,7 +58,7 @@
 	</head>
 	<body>
 		<nav>
-			<a href="#"><span>+</span></a><a href="index.html">Home</a><a href="ay.html">About me</a><a href="fbnb.html">Favorite BnB</a>
+			<a href="index.html">Home</a><span>|</span><a href="ay.html">About me</a><span>|</span><a href="fbnb.html">Favorite BnB</a>
 		</nav>
 		<article>
 			<h1><b>Autobiography</b></h1>
