--- a/personal/fbnb.html
+++ b/personal/fbnb.html
@@ -56,7 +56,7 @@
 	</style>
 	<body>
 		<nav>
-			<a href="#"><span>+</span></a><a href="index.html">Home</a><a href="ay.html">About me</a><a href="essay.html">Favorite BnB</a>
+			<a href="index.html">Home</a><span>|</span><a href="ay.html">About me</a><span>|</span><a href="fbnb.html">Favorite BnB</a>
 		</nav>
 		<article>
 			<figure><img src="img/sk2.jfif"></figure>
