--- a/personal/ay.html
+++ b/personal/ay.html
@@ -45,15 +45,11 @@
 				font-family: 'Noto Sans TC', sans-serif;
 			}
 
-			figure:first-of-type {
+			figure {
 				position: relative;
 				left: 45%;
 			}
-
-			figure:last-of-type {
-				position: relative;
-				margin-left: 40%;
-			}		
+	
 		</style>
 	</head>
 	<body>
@@ -78,6 +74,5 @@
 					高中以前，我喜歡徜徉在小說的世界之中，並閱讀了每一本金庸的作品、暢銷的哈利波特小說，與一些外國經典的翻譯作品，例如《飄》、《基督山恩仇記》和《傲慢與偏見》等等，即使因時間過去許久對於其中的內容情節不復以往的熟悉，但是回想起那些時光，我總是很感激有文學的陪伴，開闊了我的視野與豐富我的想像力，最後更將我成功地推向現在研究外國語文學的這條路上。
 				</p>
 		</article>
-		<figure><img src = "img/Frankfurt.jpg"/></figure>
 	</body>
 </html>
