--- a/personal/index.html
+++ b/personal/index.html
@@ -20,11 +20,11 @@
 			}
 		article {
 			margin: 1.5vh 0;
-			padding: 2vh 5vw;
+			padding: 1vh 4vw;
 			position: absolute;			
 		}	
 
-		article:first-of-type {
+		section:first-of-type {
 			background-color: #d2691e;
 			margin-top: 40px;
 		}
@@ -34,7 +34,7 @@
 			margin-left: 50%;
 		}
 
-		article > span {
+		article span {
 			background-color: #8fbc8f;
 		}
 	</style>
@@ -43,17 +43,14 @@
 			<a href="index.html">Home</a><span>|</span><a href="ay.html">About me</a><span>|</span><a href="fbnb.html">Favorite BnB</a>
 		</nav>	
 		<article>
-		<p>
-			Hi! I am Yi-Lin Chiang, or you can just call my English name, Elynn.<br/>I’m currently a sophomore in Tsing Hua Unervisity, and taking major in the foreign language and literature.   
-		</p>
-		<p>
-			歡迎來到我的網站!<br/>我是江宜霖，來自新竹南寮。目前為一名就讀清大外文系的大二生。<br/>
-			除此之外也對學習德語感到興趣。
-		</p>
-		</article>
-		<article>
-			Besides, I am learning a hard foreign language now! 
-			<span>Hallo! Ich bin 19 und komme aus Hsinchu~</span> 
+			<section>
+				<p>Hi! I am Yi-Lin Chiang, or you can just call my English name, Elynn.<br/>I’m currently a sophomore in Tsing Hua Unervisity, and taking major in the foreign language and literature.</p>
+				<p>歡迎來到我的網站!<br/>我是江宜霖，來自新竹南寮。目前為一名就讀清大外文系的大二生。<br/>除此之外我也對學習德語感到興趣。</p>				
+			</section>
+			<section>
+				Besides, I am learning a hard foreign language now! 
+			<span>Hallo! Ich bin 19 und komme aus Hsinchu~</span>			
+			</section>		
 		</article>
 		<figure><img src = "img/Nport.jpg"/>This is my hometown, Nanliao.</figure>
 	</body>
