--- a/personal/ay.html
+++ b/personal/ay.html
@@ -59,19 +59,19 @@
 		<article>
 			<h1><b>Autobiography</b></h1>
 			<p>
-				During my leisure time, I like to do various kinds of sports. There’s an advantage that NTHU has plenty of resources. I can randomly go for a jog in the sport field, join volleyball practices with teammates at night, or enjoy playing table tennis on weekends. Under a friend’s encouragement, I’ve also started to experience bouldering since the fresh year and found it intriguing. I believe that regularly exercising can lead to positive effect, and sometimes, even a few unexpected friendships. Overall, participating in these sports not only strengthen my body but also help invigorate my spirit. 
+				During my leisure time, I like to do various kinds of sports. There’s an advantage that NTHU has plenty of resources. I can randomly go jogging in the sport field, join a volleyball game with people at night, or enjoy playing table tennis on weekends. Through the encouragement from a friend, I’ve also started to experience bouldering in my fresh year and found it really interesting. I believe that regularly exercising can lead to positive effect, and sometimes, even a few unexpected friendships. Overall, doing these sports can not only strengthen my physical body but also help invigorate my mental state. 
 			</p>
 			<p>
-				Before the busy high school days, reading fictions used to be one of my favorite pastimes. I liked to borrow well-received series like Harry Potter, every work from Jin Yong, or sometimes the translated version of foreign classics, such as Jane Austen’s works. Bringing back those memories, I always appreciate that these literary works have brought about imagination and enriched my early adolescence. Needless to say, they show readers all over the world a significant power of words. In the end, they also fuel my passion in pursuing languages and literature in college.
+				Before busy high school days, reading fictions used to be one of my favorite pastimes. I liked to borrow well-received series like Harry Potter, compositions from Jin Yong, or the translated version of some foreign classics like Jane Austen’s works. Recalling those memories in the past, I always appreciate that these literary works have brought about a inner wonderland and enriched my imagination in my early adolescence. Needless to say, great literary works can successfully show readers all over the world the significant power of words. They also have brought an impact on me and fueled my passion in pursuing languages and literature in the college.
 			</p>
 		</article>		
 		<figure><img src = "img/nthucampus.jpg"/></figure>
 		<article>
 				<p>
-					在閒暇時我除了瀏覽一些影集或是YouTube上的影片之外，也喜歡聆聽音樂和嘗試各式各樣的運動，如慢跑、打排球、桌球、或是和朋友一起到攀岩場體驗等等。對我來說彈鋼琴是最好親近古典音樂的方式，也是長久以來一直陪伴著我的興趣。這些不同的嗜好和文學一樣，皆有舒緩人心的效果，在我偶爾陷入疲累的時候能夠幫助轉換心情、釋放情緒。
+					在閒暇時我喜歡嘗試各式各樣的運動，像是慢跑、打排球、打桌球等等，甚至和好朋友一起到攀岩場體驗不一樣的運動型態帶來的挑戰。對我來說運動是長久以來一直陪伴著我的興趣，而我也很感謝清華大學豐富的資源，提供我滿足我的這項休閒興趣。讓我能夠在偶爾陷入疲累的時候在慢跑中轉換心情、或是一場友誼球賽中釋放精力與宣洩情緒。
 				</p>
 				<p>
-					高中以前，我喜歡徜徉在小說的世界之中，並閱讀了每一本金庸的作品、暢銷的哈利波特小說，與一些外國經典的翻譯作品，例如《飄》、《基督山恩仇記》和《傲慢與偏見》等等，即使因時間過去許久對於其中的內容情節不復以往的熟悉，但是回想起那些時光，我總是很感激有文學的陪伴，開闊了我的視野與豐富我的想像力，最後更將我成功地推向現在研究外國語文學的這條路上。
+					而我認為我的文學嗜好與運動一樣，皆有舒緩人心的效果。高中以前，我喜歡徜徉在小說的世界之中，並閱讀了每一本金庸的作品、暢銷的哈利波特小說，與一些外國經典的翻譯作品，例如《飄》、《基督山恩仇記》和《傲慢與偏見》等等，即使因時間過去許久對於其中的內容情節不復以往的熟悉，但是回想起那些時光，我總是很感激有文學的陪伴，開闊了我的視野與豐富我的想像力，最後更將我成功地推向現在研究外國語文學的這條路上。
 				</p>
 		</article>
 	</body>
