--- a/personal/index.html
+++ b/personal/index.html
@@ -24,14 +24,14 @@
 			position: absolute;			
 		}	
 
-		section:first-of-type {
+		section:first-of-type p {
 			background-color: #d2691e;
 			margin-top: 40px;
 		}
 
 		figure {
 			position: relative;
-			margin-left: 50%;
+			left: 5%;
 		}
 
 		article span {
@@ -48,8 +48,8 @@
 				<p>歡迎來到我的網站!<br/>我是江宜霖，來自新竹南寮。目前為一名就讀清大外文系的大二生。<br/>除此之外我也對學習德語感到興趣。</p>				
 			</section>
 			<section>
-				Besides, I am learning a hard foreign language now! 
-			<span>Hallo! Ich bin 19 und komme aus Hsinchu~</span>			
+				Besides, I am learning a hard foreign language now!<br/> 
+				<span>Hallo! Ich bin 19 und komme aus Hsinchu~</span>			
 			</section>		
 		</article>
 		<figure><img src = "img/Nport.jpg"/>This is my hometown, Nanliao.</figure>
