--- a/personal/ay.html
+++ b/personal/ay.html
@@ -71,7 +71,7 @@
 					在閒暇時我喜歡嘗試各式各樣的運動，像是慢跑、打排球、打桌球等等，甚至和好朋友一起到攀岩場體驗不一樣的運動型態帶來的挑戰。對我來說運動是長久以來一直陪伴著我的興趣，而我也很感謝清華大學豐富的資源，提供我滿足我的這項休閒興趣。讓我能夠在偶爾陷入疲累的時候在慢跑中轉換心情、或是一場友誼球賽中釋放精力與宣洩情緒。
 				</p>
 				<p>
-					而我認為我的文學嗜好與運動一樣，皆有舒緩人心的效果。高中以前，我喜歡徜徉在小說的世界之中，並閱讀了每一本金庸的作品、暢銷的哈利波特小說，與一些外國經典的翻譯作品，例如《飄》、《基督山恩仇記》和《傲慢與偏見》等等，即使因時間過去許久對於其中的內容情節不復以往的熟悉，但是回想起那些時光，我總是很感激有文學的陪伴，開闊了我的視野與豐富我的想像力，最後更將我成功地推向現在研究外國語文學的這條路上。
+					而我認為我的文學嗜好與運動一樣，皆有舒緩人心的效果。高中以前，我喜歡徜徉在小說的世界之中，並曾經沉迷在金庸小說之中的武俠故事、讀遍每一本金庸集，除此之外，我也熱愛閱讀暢銷的《哈利波特》，或是喜歡在圖書館借閱一些外國的經典翻譯小說，例如《飄》、《基督山恩仇記》和珍·奧斯丁的《傲慢與偏見》等等作品。即使因時間過去許久對於一些書中的內容情節不復以往的熟悉，但是回想起這些時光，我總是很感激有文學的陪伴，開闊了我的視野與豐富我的想像力，最後更將我成功地推向現在學習外國語文學的這條路上。
 				</p>
 		</article>
 	</body>
