--- a/personal/fbnb.html
+++ b/personal/fbnb.html
@@ -33,7 +33,7 @@
 		}
 
 		section:last-of-type p{
-			background-color: ;
+			background-color: #00bfff;
 			margin-left: 10%;
 			width: 50%;
 		}
@@ -53,6 +53,15 @@
 		figure {
 			margin-top: 30px;
 		}
+
+		div {
+			left: 10px;
+		}
+
+		div p {
+			background-color: #8fbc8f;
+		}
+		
 	</style>
 	<body>
 		<nav>
@@ -60,16 +69,18 @@
 		</nav>
 		<article>
 			<figure><img src="img/sk2.jfif"></figure>
-			<section>
-				<h1>A Yard in the Sky – an unforgettable B&B trip</h1>
-				<p>
-					 Five years ago, my family booked a two-day trip in a Nantou BnB. When we were wondering about where to go in a summer vacation, we found an unusual name called “A Yard in the Sky” on the booking website. In this BnB, there is no television, billiard table, or any other multimedia equipment. There is a butler. Besides, the surrounding area is full of bamboo and a pond with animals such as lizards, frogs, or geese. Although we had heard of a good reputation of the place, there were still a little worries and doubts before the trip. But, eventually, the BnB turned out to be a wonderful place for our relaxing family trip. 
-				</p>
+			<div>
 				<p>
 					Speaking of the foundation of the BnB, the story is long and intriguing. At first, it was built by a big boy with his cousin. The original goal was simple: He wanted to build a simple BnB that can be coexist with  the beautiful nature. And the dream prompted the boy to leave his college and stepped into an unknown path.
 				</p>
 				<p>
 					The founder, He Pei-Jun, has been determined throughout his founding of the business. He wants the B&B to keep the simplest appearance. “A Yard in the Sky” strives to associate with environmentally friendly concept and builds connection with local culture. It takes the goal seriously. The building has made of local materials and the food comes from local ingredients. Besides, the plates are mainly Hakka cuisine, reflecting an authentic and traditional taste. The guests should put an effort in keeping the environment as well. We are suggested stay in our own rooms and be quiet after ten at night. Besides, every public resource has to be fully cleaned up before being placed to the original sites.
+				</p>
+			</div>
+			<section>
+				<h1>A Yard in the Sky – an unforgettable B&B trip</h1>
+				<p>
+					 Five years ago, my family booked a two-day trip in a Nantou BnB. When we were wondering about where to go in a summer vacation, we found an unusual name called “A Yard in the Sky” on the booking website. In this BnB, there is no television, billiard table, or any other multimedia equipment. There is a butler. Besides, the surrounding area is full of bamboo and a pond with animals such as lizards, frogs, or geese. Although we had heard of a good reputation of the place, there were still a little worries and doubts before the trip. But, eventually, the BnB turned out to be a wonderful place for our relaxing family trip. 
 				</p>
 				<p>
 					The BnB doesn’t have fancy facilities, as the above introduction, and a wooden library could definitely be the most attractive ones among them. It has a delicate design with a set of comfortable chairs and table. All the bookshelves lie in the back. They demonstrate an open and cozy area, invite every visitor to go inside the place and set themselves in the favorite seats. Afterwards, they enjoy the abundance of the book resource within the tranquil and soothing atmosphere. My family really liked the place, and we spent a long while inside the small library at our first and the only night. In addition to the public facility, we also enjoyed our meals in the BnB a lot. Since the ingredients didn’t come from the outside, the food seemed to taste warmer and authentic. The wooden containers were so elegant with traditional Chinese poems on the lids that we couldn’t help taking numerous photos in the sense of admiration. Coming to the end of the first day, we were all satisfied with our new residence and this “yard in the sky”. Needless to say, the simplest design of a building could actually achieve the best effect. It not only caters to the desire to rest from the hustling and bustling in cities, but also strikes the balance between protecting the nature and earning money. By building up sustainable environment and seeking harmony with local regions, “A Yard in the Sky” is truly becoming successful and sets up its brand.
