--- a/personal/fbnb.html
+++ b/personal/fbnb.html
@@ -61,7 +61,7 @@
 		div p {
 			background-color: #8fbc8f;
 		}
-		
+
 	</style>
 	<body>
 		<nav>
@@ -74,7 +74,7 @@
 					Speaking of the foundation of the BnB, the story is long and intriguing. At first, it was built by a big boy with his cousin. The original goal was simple: He wanted to build a simple BnB that can be coexist with  the beautiful nature. And the dream prompted the boy to leave his college and stepped into an unknown path.
 				</p>
 				<p>
-					The founder, He Pei-Jun, has been determined throughout his founding of the business. He wants the B&B to keep the simplest appearance. “A Yard in the Sky” strives to associate with environmentally friendly concept and builds connection with local culture. It takes the goal seriously. The building has made of local materials and the food comes from local ingredients. Besides, the plates are mainly Hakka cuisine, reflecting an authentic and traditional taste. The guests should put an effort in keeping the environment as well. We are suggested stay in our own rooms and be quiet after ten at night. Besides, every public resource has to be fully cleaned up before being placed to the original sites.
+					The founder, He Pei-Jun, has been determined throughout his founding of the business. He wants the B&B to keep the simplest appearance. “A Yard in the Sky” strives to associate with environmentally friendly concept and builds connection with local culture. It takes the goal seriously. The building has made of local materials and the food comes from local ingredients. Besides, In order to keep the cleanliness in the environment, the guests should put an effort as well. For example, we should be aware of the behaviors and the volume at night. It is suggested that we stay in our own rooms and be quiet after ten p.m. Lastly, every public resource has to be fully cleaned up before being placed to the original sites.  
 				</p>
 			</div>
 			<section>
@@ -83,7 +83,12 @@
 					 Five years ago, my family booked a two-day trip in a Nantou BnB. When we were wondering about where to go in a summer vacation, we found an unusual name called “A Yard in the Sky” on the booking website. In this BnB, there is no television, billiard table, or any other multimedia equipment. There is a butler. Besides, the surrounding area is full of bamboo and a pond with animals such as lizards, frogs, or geese. Although we had heard of a good reputation of the place, there were still a little worries and doubts before the trip. But, eventually, the BnB turned out to be a wonderful place for our relaxing family trip. 
 				</p>
 				<p>
-					The BnB doesn’t have fancy facilities, as the above introduction, and a wooden library could definitely be the most attractive ones among them. It has a delicate design with a set of comfortable chairs and table. All the bookshelves lie in the back. They demonstrate an open and cozy area, invite every visitor to go inside the place and set themselves in the favorite seats. Afterwards, they enjoy the abundance of the book resource within the tranquil and soothing atmosphere. My family really liked the place, and we spent a long while inside the small library at our first and the only night. In addition to the public facility, we also enjoyed our meals in the BnB a lot. Since the ingredients didn’t come from the outside, the food seemed to taste warmer and authentic. The wooden containers were so elegant with traditional Chinese poems on the lids that we couldn’t help taking numerous photos in the sense of admiration. Coming to the end of the first day, we were all satisfied with our new residence and this “yard in the sky”. Needless to say, the simplest design of a building could actually achieve the best effect. It not only caters to the desire to rest from the hustling and bustling in cities, but also strikes the balance between protecting the nature and earning money. By building up sustainable environment and seeking harmony with local regions, “A Yard in the Sky” is truly becoming successful and sets up its brand.
+					The BnB doesn’t have many guests events, but it owns amazing scenery and a comfortable environment. Therefore, we never felt a second of the monotony in the BnB. Also, even without fancy facilities, there was a wooden library catching my attention in the first sight. It had a delicate design with a set of comfortable chairs and table. All the bookshelves lied in the back of the room, creating a large space in the middle area. They demonstrated an open layout and produced a cozy atmosphere. Every visitor could easily step inside the room and set themselves in the favorite seats. Afterwards, they could enjoy an abundance of book resource within a tranquil and soothing atmosphere.My family really liked the place, and we spent a long while in the small library at our first and the only night.
+				<p>
+					In addition to the public facility, we also enjoyed our meals in the BnB a lot. The plates in “A Yard in the Sky” were mainly Hakka cuisine, reflecting an authentic and traditional taste. Since the ingredients didn’t come from the outside, the food seemed heathier and more environmentally friendly. Furthermore, the wooden containers were so elegant with traditional Chinese poems on the lids that we couldn’t help taking numerous photos. 
+				</p>
+				<p>
+					Coming to the end of the first day, we were all satisfied with our new residence and this “yard in the sky”. It is surprising and inspiring that the simplest design of a building in a lush woods can actually achieve a goal of being coexisted with the nature. For the city guests, like my family, the place has provided a temporary shelter that enables us to rest from the hustling and bustling in lives. In the mesantime, the BnB also strikes a balance between protecting the nature and maintaining a business. All in all, by holding a sustainable attitude and seeking harmony with the local regions, “A Yard in the Sky” literally creates a paradise on the ground and lives up to its fame.
 				</p>
 			</section>
 			<figure><img src="img/b.jpg"></figure>
