--- a/personal/fbnb.html
+++ b/personal/fbnb.html
@@ -94,10 +94,10 @@
 			<figure><img src="img/b.jpg"></figure>
 			<section>
 				<p>
-					五年前的暑假，我們家在南投一間名為「天空的院子」的民宿訂了一個兩天一夜的行程。透過簡潔幾行的內容介紹中了解到民宿沒有電視、撞球桌、或者任何媒體影音設備，各種疑難雜事有一位管家負責打理，然而入住期間也無附帶手工藝活動或者農場參觀等體驗。雖然民宿小有名氣，但這趟未知旅程也帶來些許懷疑與擔憂。直到親身走訪林間小屋的蔥鬱之中，所有疑慮才逐漸消融，最後在我們心中留下對於旅途深刻的回憶。
+					五年前的暑假，我們家在南投一間名為「天空的院子」的民宿訂了一個兩天一夜的行程。透過簡潔幾行的內容介紹中，發現到民宿中的設備堪稱簡陋，其中沒有唱歌房、球桌、或者任何媒體影音設備，各種疑難雜事有一位管家負責打理，民宿也無附帶手工藝活動或者農場參觀等體驗，留給旅客的僅僅有乾淨舒適的房間與美麗幽靜的自然環境。雖然民宿小有名氣，但這趟未知旅程也帶來許多懷疑與擔憂，直到最後我們親身走訪民宿後，所有疑慮才逐漸消融，並在我們心中留下對於旅途深刻的回憶。
 				</p>
 				<p>
-					這間民宿的創始故事並不簡單。當初是由一位毅然停學的大男孩與親友白手起家，秉持最純粹的想法做出行動，想要在竹林間打造與自然共存的棲所，令到訪的旅客能暫時拋卻城市喧囂而回歸鄉林間。「天空的院子」的經營始終與簡樸和環保的概念作為結合，建築使用當地木材、餐點也來自在地食材並帶有客家文化。在房客入住的期間，所有人也是一同努力來維護環境的良善，十點之後便被建議待在房間中、保持安靜，在公共設備使用完畢後也須清潔過後放回原位。而民宿最令人神往的公共設施則是一間開放式、由木材打造的圖書館。
+					這間民宿的創始故事並不簡單。當初是由一位毅然停學的大男孩與表哥白手起家，秉持最純粹的想法創業。民宿的主人何培鈞想要在竹林間打造與自然共存的棲所，令到訪的旅客能暫時拋卻城市喧囂而回歸鄉林間。因此「天空的院子」的經營始終與簡樸和環保的概念作為結合，建築使用當地木材；餐點也來自在地食材、並帶有客家文化。在房客入住的期間，所有人也需一同努力來維護環境的整潔，十點之後盡量要保持安靜並且待在房內，最後，使用完公共設備後，則需要好好清潔後才能放回原位。
 				</p>
 			</section>
 		</article>
